gccida/c2/canon_rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_rtx/src/alias.c:1531:41: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( v4 == x->fld[0].rtx && v5 == ( rtx)x[1] ) 
                                        ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_rtx/src/alias.c:1543:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), v4, v5); 
                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_rtx/src/obj/alias.o] Error 1
